Fixed login and navigation

--- a/real/index.html
+++ b/real/index.html
@@ -13,7 +13,10 @@
         <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/login_style.css">
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
         <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+        <script src="scripts/check_mainlogin.js"></script>
         <script src="scripts/FirebaseScript.js"></script>
 
     </head>
