--- a/real/detailsTable.html
+++ b/real/detailsTable.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="scripts/check_login.js"></script>
+    
     <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
     <script src="scripts/sidemenu_script.js"></script>
     <script src="scripts/detailtable_script.js"></script>
