--- a/real/mainTable.html
+++ b/real/mainTable.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="scripts/check_login.js"></script>
+
     <script src="scripts/sidemenu_script.js"></script>
     <script src="scripts/maintable_script.js"></script>
 
