Add LogOut in MainTable

--- a/real/mainTable.html
+++ b/real/mainTable.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" type="text/css" href="css/table_style.css">
     <link rel="stylesheet" type="text/css" href="css/sidemenu_style.css">
     <link rel="stylesheet" type="text/css" href="css/modal_style.css">
+    <link rel="stylesheet" type="text/css" href="css/alert_style.css">
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
@@ -47,6 +49,10 @@
             <div class="stackHorizontal clickable">
                 <div class="icon"><i class="fa fa-info" aria-hidden="true"></i></div>
                 <div class="text">Info</div>
+            </div>
+            <div class="stackHorizontal clickable" onclick="LogOut()">
+                <div class="icon"><i class="fa fa-sign-out" aria-hidden="true"></i></div>
+                <div class="text">Log Out</div>
             </div>
         </div>
 
