--- a/login/index.html
+++ b/login/index.html
@@ -22,6 +22,7 @@
                 <button id="btnSignIn2" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect" onclick="document.getElementById('Login').style.display='block'"><i class="material-icons">account_circle</i> Google </button>
                 <button id="btnSignIn" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect"><i class="material-icons">account_circle</i> Facebook </button>
                 <button id="btnLogOut" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect" onclick="LogOut()"><i class="material-icons">account_circle</i> Log Out </button>
+                <button id="btnWrite" class="mdl-button--raised mdl-button mdl-js-button mdl-js-ripple-effect" onclick="WriteData()"><i class="material-icons">account_circle</i>Write</button>
             </div>
             </br></br>
             <div id="DivMargin">
