--- a/real/AddItemsTmp.html
+++ b/real/AddItemsTmp.html
@@ -7,8 +7,8 @@
 
         <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>       
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="scripts/FirebaseScript.js"></script>
-        <script src="scripts/AddItems.js"></script>
+        <!--<script src="scripts/FirebaseScript.js"></script>
+        <script src="scripts/AddItems.js"></script>-->
 
     </head>
     <body>
